[package]
name = "shaved_iced"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"
resolver = "2"

[dependencies]
iced = { git = "https://github.com/nicksenger/iced", branch = "local-state" }
iced_futures = { git = "https://github.com/nicksenger/iced", branch = "local-state" }
iced_native = { git = "https://github.com/nicksenger/iced", branch = "local-state" }
pin-project = "1"
thiserror = "1"

[workspace]
members = [
    "examples/ping_pong"
]

[features]
test = []
